@@ -1,6 +1,15 @@
+2009-12-03 13:14  rsbivand
+
+	* DESCRIPTION, R/chfids.R: spChFIDs speed-up in R
+
+2009-11-20 10:43  edzer
+
+	* DESCRIPTION: date update
+
 2009-11-19 21:08  rsbivand
 
-	* DESCRIPTION, NAMESPACE: docs linkage problems from maptools
+	* DESCRIPTION, NAMESPACE, ChangeLog, inst/ChangeLog: docs linkage
+	  problems from maptools
 
 2009-11-19 14:25  edzer
 
